--- a/style.css
+++ b/style.css
@@ -1,77 +1,123 @@
 @font-face {
-  font-family: 'Satoshi';
-  src: url('./fonts/Satoshi-Medium.woff2') format('woff2'),
-       url('./fonts/Satoshi-Medium.woff') format('woff'),
-       url('./fonts/Satoshi-Medium.ttf') format('truetype');
-       font-weight: 300 900;
-       font-display: swap;
-       font-style: normal;
+    font-family: "Satoshi";
+    src: url("./fonts/Satoshi-Medium.woff2") format("woff2"),
+        url("./fonts/Satoshi-Medium.woff") format("woff"),
+        url("./fonts/Satoshi-Medium.ttf") format("truetype");
+    font-weight: 300 900;
+    font-display: swap;
+    font-style: normal;
 }
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 li {
-  list-style-type: none;
+    list-style-type: none;
 }
-
-
 
 /* hero-container */
 .hero-container {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.00) 89.75%, rgba(0, 0, 0, 0.70) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.93) 107.96%);
-  height: 100vh;
+    background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0) 89.75%,
+            rgba(0, 0, 0, 0.7) 100%
+        ),
+        linear-gradient(
+            180deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.93) 107.96%
+        );
+    height: 100vh;
 }
 .hc-bg {
-  background-image: url("./img/bg/hero-bg.png");
-  background-position: center;
-  background-size: cover;
+    background-image: url("./img/bg/hero-bg.png");
+    background-position: center;
+    background-size: cover;
 }
 .header {
-  display: flex;
-  margin: 0 80px;
-  padding: 20px 0;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    margin: 0 80px;
+    padding: 20px 0;
+    justify-content: space-between;
+    align-items: center;
+}
+.mobile-menu {
+    display: none;
 }
 .menu ul {
-  display: flex;
+    display: flex;
 }
-.menu ul li a{
-  color:  #FCFCFC;
-  padding: 10px 12px;
-  font-family: Satoshi;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 155%; /* 21.7px */
+.menu ul li a {
+    color: #fcfcfc;
+    padding: 10px 12px;
+    font-family: Satoshi;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 155%; /* 21.7px */
 }
 .btn {
-  color: #18181B;
-  font-family: Satoshi;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  padding: 10px 18px;
-  border-radius: 8px;
-  border: 1px solid transparent;
+    color: #18181b;
+    font-family: Satoshi;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    padding: 10px 18px;
+    border-radius: 8px;
+    border: 1px solid transparent;
+}
+.hb-icon {
+    display: none;
 }
 
-
-
-
-
-
-
-
-
-
-
 @media screen and (max-width: 1080px) {
-  
+    .hb-icon {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .menu,
+    .header > .btn {
+        display: none;
+    }
+    .hb-icon {
+        display: block;
+    }
+    .header {
+        margin: 0 20px;
+        padding: 20px 0;
+    }
+    .mobile-menu {
+        /* display: flex; */
+        flex-direction: column;
+        margin: 20px 0;
+        background-color: white;
+    }
+    .mobile-menu ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+    }
+    .mobile-menu ul a {
+        color: #70707B;
+        padding: 10px 12px;
+        font-family: Satoshi;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 155%; /* 21.7px */
+    }
+    .mobile-menu .btn {
+        background-color: black;
+        color: white;
+        margin: 30px auto;
+    }
+    
 }
